# ed25519-dalek-fiat

./: CHANGELOG.md  Cargo.toml  README.md
benches/: ed25519_benchmarks.rs
src/: aggregated_signature.rs  batch.rs  keypair.rs  lib.rs  public.rs  secret.rs  signature.rs
tests/: aggregated.rs  ed25519.rs
